5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1807_2563.log
== TEST (2019-06-10 21:43:05) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
for (i=0; size(vetor)>1; i++):
	if(vetor[i]>=5 and vetor[i]<7):
		ap_nm = ap_nm + 1
	print(ap_nm)
-- ERROR:
File "XXXX", line 4
    for (i=0; size(vetor)>1; i++):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:00:16) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for (i=0; size(vetor)>1; i++):
		if(vetor[i]>=5 and vetor[i]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	vetor = array(eval(input()))

-- EXECUTION TIME:
0.614494
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 5
    for (i=0; size(vetor)>1; i++):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:00:33) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for (i=0; size(vetor)>1; i++):
		if(vetor[i]>=5 and vetor[i]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))

-- EXECUTION TIME:
0.796791
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 5
    for (i=0; size(vetor)>1; i++):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:00:39) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for (i=0; size(vetor)>1; i++):
		if(vetor[i]>=5 and vetor[i]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))

-- ERROR:
File "XXXX", line 5
    for (i=0; size(vetor)>1; i++):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:33:50) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for x in vetor:
		if(vetor[i]>=5 and vetor[i]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))

-- EXECUTION TIME:
1.10642
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 6, in <module>
    if(vetor[i]>=5 and vetor[i]<7):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:33:51) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for x in vetor:
		if(vetor[i]>=5 and vetor[i]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:34:17) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for x in vetor:
		if(vetor[x]>=5 and vetor[x]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))

-- EXECUTION TIME:
0.931437
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 6, in <module>
    if(vetor[x]>=5 and vetor[x]<7):
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:34:22) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for x in vetor:
		if(vetor[x]>=5 and vetor[x]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:34:24) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for x in vetor:
		if(vetor[x]>=5 and vetor[x]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))

-- EXECUTION TIME:
0.969506
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 6, in <module>
    if(vetor[x]>=5 and vetor[x]<7):
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:45:21) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for x in range(size(vetor)):
		if(vetor[x]>=5 and vetor[x]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))

-- EXECUTION TIME:
1.02033
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 10, in <module>
    vetor = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:45:22) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for x in range(size(vetor)):
		if(vetor[x]>=5 and vetor[x]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:47:05) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for x in range(size(vetor)):
		if(vetor[x]>=5 and vetor[x]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:48:06) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for x in range(size(vetor)):
		if(vetor[x]>=5 and vetor[x]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))
break;
-- EXECUTION TIME:
0.661198
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 11
    break;
    ^
SyntaxError: 'break' outside loop

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:48:07) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for x in range(size(vetor)):
		if(vetor[x]>=5 and vetor[x]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))
break;
-- ERROR:
File "XXXX", line 11
    break;
    ^
SyntaxError: 'break' outside loop
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:53:50) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for x in range(size(vetor)):
		if(vetor[x]>=5 and vetor[x]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	if(size(vetor>1)):
		ap_nm = 0
		vetor = array(eval(input()))

-- EXECUTION TIME:
1.10959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 11, in <module>
    vetor = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:22:58) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while(size(vetor>1)):
	for x in range(size(vetor)):
		if(vetor[x]>=5 and vetor[x]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:24:42) 
-- CODE:
from numpy import *
vetor = array(eval(input()))
ap_nm = 0
while (size(vetor) > 1):
	for x in range(size(vetor)):
		if(vetor[x]>=5 and vetor[x]<7):
			ap_nm = ap_nm + 1
	print(ap_nm)
	ap_nm = 0
	vetor = array(eval(input()))

-- EXECUTION TIME:
1.04053
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
